style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

body {
    font-family: "Roboto", sans-serif;
    display: flex;
    flex-direction: column;
    margin: 0;
}

.header,
.welcome {
    background-color: #1F2937;
}

.links,
.hero-body {
    font-size: 18px;
    color: #E5E7EB;
}

.header {
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    padding: 8px 100px;
}

ul {
    font-size: 18px;
    list-style-type: none;
    display: flex;
    margin: 0;
    padding: 0px;
    gap: 16px;
}

a {
    text-decoration: none;
    color: #E5E7EB;
}

.logo {
    font-size: 24px;
    color: #f9faf8;
}

.welcome {
    display: flex;
    justify-content: center;
    padding: 50px 100px;
    gap: 10px;
}

.hero {
    display: flex;
    flex-direction: column;
    max-width: 300px;
    gap: 8px;
}

.hero-head {
    font-size: 48px;
    color: #f9faf8;
    font-weight: 900;
}

.welcome button {
    border-radius: 5px;
    background-color: #3882f6;
    color: #f9faf8;
    text-align: center;
    padding: 5px 16px;
    border: none;
    width: 100px;
    cursor: pointer;
}

.recipe {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 50px 100px;
    gap: 16px;
}

.recipe-head {
    font-size: 20px;
    font-weight: 900;
}

.recipe .cards {
    display: flex;
    gap: 24px;
    justify-content: baseline;
}

.card {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 12px;
}

.card img {
    width: 100px;
    border: solid #3882f6 3px;
    border-radius: 8px;
    padding: 8px;
}

.card .subtext {
    flex-wrap: wrap;
    text-align: center;
    font-size: 14px;
    font-weight: 300;
}

.blurb {
    background-color: #E5E7EB;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 50px 100px;
    gap: 8px;
}

.quote {
    font-size: 36px;
    font-style: italic;
    font-weight: 200;
    color: #1F2937;
}

.author {
    align-self: flex-end;
    font-weight: 600;
}

.four {
    display: flex;
    padding: 50px;
    justify-content: center;
}

.action-box {
    background-color: #3882f6;
    color: #f9faf8;
    border-radius: 5px;
    padding: 16px;
    display: flex;
}

.action-left {
    flex-basis: 100%;
    display: flex;
    flex-direction: column;
    gap: 4px;
}

.action-header {
    font-size: 16px;
    font-weight: 800;
}

.action-body {
    font-size: 14px;
    font-weight: 300;
}

.action-right {
    flex-basis: 33%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.action-button {
    background-color: #3882f6;
    color: #f9faf8;
    border: #f9faf8 solid 1px;
    border-radius: 4px;
    cursor: pointer;
    padding: 3px 16px;
}

.footer {
    background-color: #1F2937;
    color: #E5E7EB;
    text-align: center;
    font-size: 12px;
    font-weight: 300;
    padding: 16px;
    margin-top: auto;
}

